--- a/public/views/rank.html
+++ b/public/views/rank.html
@@ -1,5 +1,8 @@
 <div class="jumbotron text-center">
-	<h1>해주세요</h1>
+	<h1>Rank</h1>
 
-	<p>{{ tagline }}</p>
+	<div class="rankContainer" ng-repeat="user in ranks">
+		
+
+	</div>
 </div>
