modify mongodb query

--- a/public/views/search.html
+++ b/public/views/search.html
@@ -3,5 +3,5 @@
 </div>
 
 <form>
-	<input type="text" ng-model='keyword' placeholder="유저 닉네임...유저 닉네임...유저 닉네임...유저 닉네임...검색...">
+    <input type="text" ng-model='keyword' placeholder="유저 닉네임...유저 닉네임...유저 닉네임...유저 닉네임...검색..." ng-keydown="$event.which === 13 ? search(keyword) : ''">
 </form>
