--- a/public/css/style.css
+++ b/public/css/style.css
@@ -47,9 +47,10 @@ form {
 }
 
 .userContainer {
-	width: 700px;
+    width: 700px;
+    border: 1px solid #aaa;
 }
-
 .userStack {
-	float: left;
+    float: left;
+    border: 1px solid blue;
 }
